jar to war transformation